--- a/menucss.css
+++ b/menucss.css
@@ -361,3 +361,22 @@ input{
     font-family:'Quicksand', sans-serif ;
     font-size: 20px;
 }
+.rev_str{
+    margin-top: 20px;
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+}
+#str_conatainer{
+    display: flex;
+    width: fit-content;
+}
+.str{
+    color: white;
+    font-size: 28px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border: none;
+    padding: 0;
+    background: none;
+}
