--- a/menucss.css
+++ b/menucss.css
@@ -284,7 +284,7 @@ input{
     font-size: 20px;
     color: white;
 }
-#acc_numID,#crdHol_ID{
+#acc_numID,#crdHol_ID,#c_address{
     color: white;
     border: 1px solid white;
     border-radius: 10px;
